# handyinfo

./: .markdownlint.yml  .yamllint.yml  404.html  Ansible_LearningMaterials.md  AutoCon0-coverage.md  Git_LearningMaterials.md  Go_LearningMaterials.md  Nornir_LearningMaterials.md  Python_LearningMaterials.md  README.md  StartHere.md  index.html  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: docs.yaml
StartHere/: index.html
autocon_coverage/autocon0/: index.html
autocon_coverage/autocon1/: index.html
autocon_coverage/autocon2/: index.html
autocon_coverage/autocon3/: index.html
autocon_coverage/autocon4/: index.html
autocon_coverage/autocon5/: index.html
autocon_coverage/slides/AutoCon1/Day1_Wednesday_29May/: AC1-day1-02_UrsBaumann_FailedProject.pptx  AC1-day1-03_ShannonByrne_10ObscureThings.pptx  AC1-day1-04_GarrettNowak_Jump.pptx  (+2 more)
docs/: CNAME  StartHere.md  index.md
docs/autocon_coverage/: autocon0.md  autocon1.md  autocon2.md  autocon3.md  autocon4.md  autocon5.md
docs/examples/dartmouth-device-templates/: README.md
docs/learning_materials/: ansible.md  general.md  git.md  go.md  nornir.md  python.md  templating.md  terraform.md
docs/stylesheets/: extra.css
learning_materials/ansible/: index.html
learning_materials/general/: index.html
learning_materials/git/: index.html
learning_materials/go/: index.html
learning_materials/nornir/: index.html
learning_materials/python/: index.html
learning_materials/templating/: index.html
learning_materials/terraform/: index.html
(+170 files in other folders)
